HTML-Challenge/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: sans-serif;
  line-height: 1.4;
}

/* PRODUCT */

.product {
  border: 4px solid black;
  width: 825px;
  margin: 50px auto;
  position: relative;
}

.product-title {
  background-color: rgb(165, 165, 165);
  text-align: center;
  font-size: 22px;
  text-transform: uppercase;
  padding: 15px 0;
}

.converse {
  float: left;
}

.product-info {
  margin-top: 15px;
  margin-left: 30px;
  float: left;
  width: 275px;
}

.product-details {
  margin-top: 15px;
  float: left;
  width: 225px;
}

.price {
  font-size: 24px;
  margin-bottom: 15px;
}

.shipping {
  font-size: 14px;
  font-weight: bold;
  text-transform: uppercase;
  color: #777;
  margin-bottom: 15px;
}

.sale {
  background-color: #ec2f2f;
  color: #fff;
  font-size: 12px;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 1px;
  padding: 7px 15px;
  display: inline-block;
  position: absolute;
  top: -17px;
  left: -26px;
}

.description {
  margin-bottom: 15px;
}

/* LINK INFO */
.more-info-container {
  margin-bottom: 15px;
}

.more-info {
  margin-bottom: 15px;
}

.more-info:link, .more-info:visited {
  color: black;
}

.more-info:hover, more-info:active {
  text-decoration: none;
}

.colors {
  margin-bottom: 15px;
}

.color {
  background-color: #000;
  height: 22px;
  width: 22px;
  display: inline-block;
  margin-right: 5px;
}

.color-blue {
  background-color: #2f6ee2;
}

.color-red {
  background-color: red;
}

.color-yellow {
  background-color: yellow;
}

.color-green {
  background-color: green;
}

.color-brown {
  background-color: brown;
  margin-right: 0;
}

/* PRODUCT DETAILS */
.details-title {
  text-transform: uppercase;
  font-size: 16px;
  margin-bottom: 15px;
}

.details-list {
  list-style: square;
  margin-left: 20px;
  margin-bottom: 10px;
}

li {
  margin-bottom: 5px;
}

li:last-child {
  margin-bottom: 0;
}

/* BUTTON */
.add-cart {
  background-color: black;
  border: none;
  color: #fff;
  font-size: 20px;
  text-transform: uppercase;
  cursor: pointer;
  width: 100%;
  padding: 15px;
  border-top: black 4px solid;
}

.add-cart:hover {
  background-color: #fff;
  color: #000;
}

